--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.7.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.4",
+    "swiper": "^11.0.6",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
